src/objects/Invoice_Embellishment__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Embellishment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Embellishment</label>
        <referenceTo>Embellishment__c</referenceTo>
        <relationshipLabel>Invoice Embellishments</relationshipLabel>
        <relationshipName>Invoice_Embellishments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Line_Item__c</fullName>
        <label>Invoice Line Item</label>
        <referenceTo>Invoice_Line_Item__c</referenceTo>
        <relationshipLabel>Invoice Embellishments</relationshipLabel>
        <relationshipName>Invoice_Embellishments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Invoice Embellishment</label>
    <nameField>
        <label>Invoice Embellishment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Embellishments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>